# openai-chatapi-v1

./: .gitignore  LangChain.py  LangChainazure.py  assistants_openai.py  azure_openai_chat.py  azure_openai_your_data.py  chatsample.py  gpt-funccall.py  gpt-multi-turn.py  localsvraccess.py  omni-imageInput.py  openaiapikey_template.py  org_openai_chat-local.py  org_openai_chat.py  pyproject.toml  requirements.txt
