[tool.poetry]
name = "openai-chatapi"
version = "0.1.0"
description = ""
authors = ["Shuichi Kataoka <shu01k9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.28.0"
langchain = "^0.0.299"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
